# minisat

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  tablestructure.sql
.github/workflows/: build.yml
build_scripts/: build_final_predictor.sh  build_normal.sh  build_static_final_predictor.sh  build_static_normal.sh  build_static_stats.sh  build_stats.sh
cmake/toolchains/: zig-macos-static.cmake
cmake/toolchains/zig/: zig-cc  zig-cxx
crystalball/: ballofcrystal.sh  best_features.txt  gen_pandas.py  visualize_rdb_calls.py
docker/: macos-static.Dockerfile
minisat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h  cl_predictors.cc  cl_predictors.h
minisat/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  Map.h  Queue.h  Rnd.h  Sort.h  Vec.h  XAlloc.h
minisat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
minisat/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h  sql_tablestructure.h  sqlitestats.cpp  sqlitestats.h  sqlstats.h
scripts/: ballofcrystal.sh  best_features.txt  check_data_quality.py  cldata_gen_pandas.py  cldata_predict.py  gen_pandas.py  helper.py  predict.py  sample_data.py
